--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="pic-1.jpg" alt="moonknight" /><img
         src="pic-2.jpg"
         alt="moonknight"
-      /><img src="pic-3.jpg" alt="moonknight" /><img
+      /><img src="pic-3.jpg""alt" ="moonknight" /><img
         src="pic-4.jpg"
         alt="moonknight"
       /><img src="pic-5.jpg" alt="moonknight" />
