updated alt tag

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <img src="pic-1.jpg" alt="moonknight" /><img
+      <img src="pic-1.jpg" alt="Steven Grant" /><img
         src="pic-2.jpg"
         alt="moonknight"
       /><img src="pic-3.jpg""alt" ="moonknight" /><img
         src="pic-4.jpg"
-        alt="moonknight"
+        alt="Marc Spector"
       /><img src="pic-5.jpg" alt="moonknight" />
     </div>
   </body>
